--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-crypto": "~14.1.5",
     "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
+    "immer": "^10.1.1",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.5",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "^24.3.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
